objects/Department_Division_Function__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Departments with related information</description>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Description__c</fullName>
        <label>Department Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intranet_Department__c</fullName>
        <inlineHelpText>Department to be used for personalization on the Boardroom Intranet</inlineHelpText>
        <label>Intranet Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intranet_Division__c</fullName>
        <inlineHelpText>Division to be used for personalization in the Boardroom Intranet</inlineHelpText>
        <label>Intranet Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intranet_Function__c</fullName>
        <inlineHelpText>Function to be used for personalization on the Boardroom Intranet</inlineHelpText>
        <label>Intranet Function</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Department-Division-Function</label>
</CustomObject>